Add optional humidity in current state
